<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chats</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_new_account">Create new acoount</string>
    <string name="name">Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="type_a_message">Type a message</string>
</resources>